[gd_scene load_steps=8 format=3 uid="uid://ue6otj6bwght"]

[ext_resource type="Texture2D" uid="uid://h5iq4it5kewa" path="res://assets/level_1/ground.jpg" id="1_4tl78"]
[ext_resource type="Script" uid="uid://bq5igbljfr1id" path="res://scenes/Level/level.gd" id="1_65260"]
[ext_resource type="PackedScene" uid="uid://dymyjfjvgoyg5" path="res://scenes/NewPlayer/new_player.tscn" id="3_ggv0q"]
[ext_resource type="PackedScene" uid="uid://k43skcolxlck" path="res://scenes/rose/rose.tscn" id="4_v753x"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_b5p4l"]
distance = -621.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_676nv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlvsn"]
size = Vector2(36, 705)

[node name="Level" type="Node2D"]
script = ExtResource("1_65260")

[node name="Ground" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(0, 17)
shape = SubResource("WorldBoundaryShape2D_b5p4l")

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
texture_repeat = 2
position = Vector2(900, 635)
skew = 0.928515
texture = ExtResource("1_4tl78")
region_enabled = true
region_rect = Rect2(0, 0, 1800, 31.54)

[node name="rose" parent="." instance=ExtResource("4_v753x")]
position = Vector2(916, 603)
scale = Vector2(0.5, 0.5)
collision_layer = 3

[node name="NewPlayer" parent="." instance=ExtResource("3_ggv0q")]
position = Vector2(1680, 591)
scale = Vector2(0.6, 0.6)
collision_layer = 2
collision_mask = 11

[node name="Wall" type="StaticBody2D" parent="."]
collision_layer = 3
physics_material_override = SubResource("PhysicsMaterial_676nv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(-17, 342.5)
shape = SubResource("RectangleShape2D_vlvsn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2(1820, 356)
shape = SubResource("RectangleShape2D_vlvsn")

[node name="SpawnerLeft" type="Node2D" parent="."]
position = Vector2(35, 590)

[node name="SpawneryRight" type="Node2D" parent="."]
position = Vector2(1773, 590)

[node name="SpawnerTimer" type="Timer" parent="."]
autostart = true

[node name="SkillCountText" type="RichTextLabel" parent="."]
offset_left = 11.0
offset_top = 25.0
offset_right = 363.0
offset_bottom = 184.0
bbcode_enabled = true
text = "[color=black]Ennemies Kill Count :[/color]"
scroll_active = false

[node name="SkillCountText2" type="RichTextLabel" parent="."]
offset_left = 181.0
offset_top = 15.0
offset_right = 489.0
offset_bottom = 57.0
bbcode_enabled = true
text = "[color=black][b][font_size=30]0[/font_size][/b][/color]"
scroll_active = false

[connection signal="timeout" from="SpawnerTimer" to="." method="_on_spawner_timer_timeout"]
